k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shoeswebsite-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: shoeswebsite.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: shoeswebsite
            port:
              number: 80
